# pixi-cuda-environment

./: .gitignore  Dockerfile  README.md  entrypoint.sh  pixi.toml  pyproject.toml  test.py  test_arrays.py
.github/workflows/: build-docker.yaml  test.yaml
