[project]
name = "pixi-cuda-environment"
version = "0.1.0"
description = "Add a short description here"
authors = [{name = "Eric Ma", email = "ericmajinglong@gmail.com"}]
requires-python = ">= 3.11"
dependencies = ["pandas", "numpy"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
pixi-cuda-environment = { path = ".", editable = true }
jax = { version = "*" }

[tool.pixi.tasks]
test = "pytest"

[tool.pixi.dependencies]
ruff = ">=0.5.5,<0.6"
pytest = ">=8.3.2,<8.4"
ipython = ">=8.26.0,<9"
pytest-cov = ">=5.0.0,<6"

# Feature Definitions
[tool.pixi.feature.cuda]
system-requirements = {cuda = "12"}

[tool.pixi.feature.cuda.target.linux-64.pypi-dependencies]
jax = { version = "*", extras = ["cuda12"] }

# Environments
[tool.pixi.environments]
cuda = ["cuda"]
